--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/camshaw11/vanilla-node-api#readme",
   "devDependencies": {
     "nodemon": "^2.0.6"
+  },
+  "dependencies": {
+    "uuid": "^8.3.1"
   }
 }
